...
      }.tag(1)
      NavigationView {
        KesslerTabItem(navigator: assembler.resolve(), kesslerViewModel: assembler.resolve(), tabSelection: $selection)
          .navigationTitle(navigationSetTitle(item: selection))
      }
      .tabItem {
        Label("Pengukuran", systemImage: "doc.text.magnifyingglass")
      }.tag(2)
        NavigationView {
          JournalingTabItem()
            .navigationTitle(navigationSetTitle(item: selection))
        }
        .tabItem {
...
